# openlaundry-backend

./: .env  .gitignore  Cargo.toml  openlaundry-backend.sqlite3  readme.md
migrations/2021-06-23-155422_create_users/: up.sql
migrations/2021-06-24-153737_create_backup_records/: up.sql
migrations/2021-06-24-154439_update_backup_record/: up.sql
migrations/2021-07-04-135244_add_expense_column/: up.sql
src/: main.rs  model.rs  schema.rs
